# spike-transformer-compiler

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  ARCHITECTURE_SUMMARY.md  AUTONOMOUS_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_COMPLETE.md  AUTONOMOUS_SDLC_COMPLETE_MISSION_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_V4_DOCUMENTATION.md  AUTONOMOUS_SDLC_V4_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_V5_MISSION_COMPLETE.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DEVELOPMENT.md  Dockerfile  ENHANCED_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  NEUROMORPHIC_COMPILER_VALIDATION_REPORT.md  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  PROJECT_CHARTER.md  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_HARDENING_VALIDATION.md  autonomous_quality_gates.py  autonomous_quality_gates_report.json  autonomous_sdlc_v5_enhancement_complete.py  comprehensive_validation_report.json  (+37 more)
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  post-start.sh
.github/: project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.security/: sbom-config.json  slsa-config.yml
.terragon/: IMPLEMENTATION_SUMMARY.md  autonomous-executor.py  autonomous-sdlc.py  cycle-results-20250801-004750.json  discovered-opportunities.json  learning-engine.py  repository-assessment.md  scored-opportunities.json  scoring-engine.py  selected-work-item.json  signal-harvester.py  value-config.yaml  work-selector.py
benchmarks/: performance_benchmarks.py
deployment/: production_deployment.py  production_deployment_complete.py
deployment/docker/: Dockerfile  docker-compose.yml
deployment/kubernetes/: production.yaml
docs/: ARCHITECTURE.md  ROADMAP.md  SETUP_REQUIRED.md  debugging-guide.md  operational-runbook.md  security-compliance.md
docs/adr/: 0001-adr-template.md  0002-spike-ir-design.md  001-spike-ir-design.md
docs/deployment/: README.md
docs/guides/: README.md
docs/monitoring/: README.md
docs/runbooks/: README.md
docs/workflows/: github-actions-setup.md
examples/: README.md  advanced_optimization.py  autonomous_demo.py  cli_demo.py  simple_usage.py  transformer_example.py
monitoring/: alerts.yml  prometheus.yml
scripts/: collect-metrics.py  maintenance-automation.py  setup-dev-environment.sh
src/spike_transformer_compiler/: __init__.py  adaptive_cache.py  adaptive_quality_system.py  adaptive_resilience_framework.py  advanced_analytics_engine.py  advanced_scaling.py  ai_integration_engine.py  autonomous_enhancement_engine.py  autonomous_executor.py  (+46 more)
tests/: __init__.py  conftest.py  test_autonomous_systems.py  test_cli.py  test_compiler.py  test_compiler_robust.py  test_optimization.py  test_performance_benchmarks.py  test_quality_gates.py  test_security.py
(+42 files in other folders)
