[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spike-transformer-compiler"
version = "0.1.0"
description = "A TVM-style compiler for PyTorch SpikeFormer models targeting Intel Loihi 3"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Daniel Schmidt", email = "daniel@terragonlabs.ai"},
]
maintainers = [
    {name = "Daniel Schmidt", email = "daniel@terragonlabs.ai"},
]
keywords = ["neuromorphic", "pytorch", "compiler", "loihi", "spiking-neural-networks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Compilers",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "tqdm>=4.64.0",
    "matplotlib>=3.5.0",
    "scipy>=1.9.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
loihi3 = [
    "nxsdk>=1.0.0",  # Intel Loihi SDK (when available)
]
viz = [
    "graphviz>=0.20.0",
    "plotly>=5.0.0",
    "seaborn>=0.11.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/spike-transformer-compiler"
Documentation = "https://spike-transformer-compiler.readthedocs.io"
Repository = "https://github.com/yourusername/spike-transformer-compiler.git"
"Bug Tracker" = "https://github.com/yourusername/spike-transformer-compiler/issues"

[project.scripts]
spike-compile = "spike_transformer_compiler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--cov=spike_transformer_compiler",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src/spike_transformer_compiler"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]